cmake_minimum_required(VERSION 3.26)
project(Lab_Practical)

set(CMAKE_CXX_STANDARD 23)

add_executable(Lab_Practical
        #prac.c
        #prac-5.c
       #p001.c
        #p002.c
#prac-1.c
#prac-2.c
#prac-3.c
#Prac-6.c
#prac-7.c
        #prac-8.c
        #prac-9.c
        #prac-10.c
        #prac-11.c
        #prac-12.c
        #prac-13.c
        #prac-14.c
        #prac-15.c
        prac-16.c
)
